--- a/index.amp.html
+++ b/index.amp.html
@@ -4,17 +4,35 @@
 <html ⚡ lang="pt"> 
 <head>
   <meta charset="utf-8" />
+  <link rel="canonical" href="SUA URL CANONICA">
+  
+  <!-- TAG CANONICA -->
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <link rel="canonical" href="https://eloanathome.com.br/">
-  <link rel="shortcut icon" href="images/template/favicon.png">
-  <title>Prótese e Implante Dentário em Curitiba | Reabilitação Oral | Eloana</title>
-  <meta name="description" content="Eloana Thomé: Reabilitação Oral em Curitiba - (41) 3019-7333 | Dentista Referência em Implante Dentário em Curitiba, Prótese Dentária em Curitiba e Odontologia Estética"/>
+
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="URL DO SEU FAVICON">
+
+  <!-- TITLE -->
+  <title>SEU TÍTULO AQUI!</title>
+
+  <!-- DESCRIPTION -->
+  <meta name="description" content="SUA DESCRIÇÃO AQUI"/>
+
+  <!-- TAGS OG -->
   <meta property="og:locale" content="pt_BR"/>
+  <meta property="og:url" content="SUA URL CANONICA">
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Prótese e Implante Dentário em Curitiba | Reabilitação Oral | Eloana"/>
-  <meta property="og:description" content="Eloana Thomé: Reabilitação Oral em Curitiba - (41) 3019-7333 | Dentista Referência em Implante Dentário em Curitiba, Prótese Dentária em Curitiba e Odontologia Estética"/>
-  <meta content="Eloana Thomé: Reabilitação Oral em Curitiba - (41) 3019-7333 | Dentista Referência em Implante Dentário em Curitiba, Prótese Dentária em Curitiba e Odontologia Estética" name="description">
+  <meta property="og:title" content="SEU TÍTULO"/>
+  <meta property="og:site_name" content="NOME DO SEU SITE">
+  <meta property="og:description" content="DESCRIÇÃO AQUI"/>
+  <meta property="og:image" content="LINK COMPLETO DA IMAGENS À SER MOSTRADA">
+  <meta property="og:image:type" content="image/jpeg | TIPO DA IMAGEN">
+  <meta property="og:image:width" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px'">
+  <meta property="og:image:height" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px'">
+
+  <!-- AMP - FORMULÁRIO -->
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
+
   <!--CSS DO PRÓPRIO AMP-->
   <style amp-boilerplate>
   body {
@@ -176,23 +194,23 @@
           <amp-img src="images/template/logo-site.png" layout="responsive" width="5" height="3" id="logo-site"></amp-img>
         </div>
         <ul class="menu-list">
-          <a href="https://eloanathome.com.br/amp/"><li class="menu-item">Opção 1</li></a>
-          <a href="https://eloanathome.com.br/amp/sobre-dentista-em-curitiba.amp.html"><li class="menu-item">Opção 2</li></a>
+          <a href="#"><li class="menu-item">Opção 1</li></a>
+          <a href="#"><li class="menu-item">Opção 2</li></a>
           <li class="dropdown1">
             <input type="checkbox" id="toggle-1"> 
             <label for="toggle-1">Dropdown 1<div class="dropdown-icon">&#60;</div></label>
             <div class="submenu">
               <ul>
-                <a href="https://eloanathome.com.br/amp/bloco-dentario-de-porcelana-em-curitiba.amp.html">
+                <a href="#">
                 <li>Link 2</li>
                 </a>
-                <a href="https://eloanathome.com.br/amp/clareamento-dental-em-curitiba.amp.html">
+                <a href="#">
                 <li>Link 2</li>
                 </a>
               </ul>
             </div>
           </li>
-          <a href="https://eloanathome.com.br/blog/">
+          <a href="#">
           <li class="menu-item">Opção 4</li>
           </a>
           <li class="dropdown2">
@@ -203,10 +221,10 @@
             </label>
             <div class="submenu">
               <ul>
-                <a href="https://eloanathome.com.br/amp/contato.amp.html">
+                <a href="#">
                 <li>Link 1</li>
                 </a>
-                <a href="https://eloanathome.com.br/amp/agendamento.amp.html">
+                <a href="#">
                   <li>Link 2</li>
                 </a>
               </ul>
@@ -216,7 +234,7 @@
       </div>
     </nav>
     <div class="navbar">
-    <a href="index.amp.html">
+    <a href="#">
      <amp-img src="images/template/logo-site.png" layout="responsive" width="5" height="3" id="logo-site"></amp-img>
    </a>
     </div>
@@ -287,7 +305,7 @@
     <div class="normal-version container">
       <p>Este site é uma versão otimizada para dispositivos móveis (AMP).</p>
       <!-- seu site convencional -->
-      <a href="https://google.com.br">Acessar Versão Normal</a>
+      <a href="#">Acessar Versão Normal</a>
     </div>
     <div class="copyright">
       <p>Desenvolvido por</p>
