--- a/index.amp.html
+++ b/index.amp.html
@@ -20,7 +20,7 @@
 
   <!-- TAGS OG -->
   <meta property="og:locale" content="pt_BR"/>
-  <meta property="og:url" content="SUA URL CANONICA">
+  <meta property="og:url" content="SUA URL DA SUA AMP">
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="SEU TÍTULO"/>
   <meta property="og:site_name" content="NOME DO SEU SITE">
