--- a/index.amp.html
+++ b/index.amp.html
@@ -27,8 +27,8 @@
   <meta property="og:description" content="DESCRIÇÃO AQUI"/>
   <meta property="og:image" content="LINK COMPLETO DA IMAGENS À SER MOSTRADA">
   <meta property="og:image:type" content="image/jpeg | TIPO DA IMAGEN">
-  <meta property="og:image:width" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px'">
-  <meta property="og:image:height" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px'">
+  <meta property="og:image:width" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px')">
+  <meta property="og:image:height" content="TAMANHO DA IMAGEM EM PIXELS (SEM 'px')">
 
   <!-- AMP - FORMULÁRIO -->
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
